--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+.active {
+    border-bottom: 2px solid #0b5ed7;
+    font-weight: bold;
+    color: #0b5ed7 !important;
+}
+
 .App {
     text-align: center;
 }
